objects/CopilotEvents__dll.object
<CustomObject>
    <fields>
        <fullName>KQ_uuid__c</fullName>
        <label>KQ_uuid</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>botId__c</fullName>
        <label>botId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>channelType__c</fullName>
        <label>channelType</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chatbotSession__c</fullName>
        <label>chatbotSession</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contextVariableInput_name__c</fullName>
        <label>contextVariableInput_name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contextVariableInput_value__c</fullName>
        <label>contextVariableInput_value</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>conversationDefinition__c</fullName>
        <label>conversationDefinition</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>conversationDialog__c</fullName>
        <label>conversationDialog</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>conversationEventLogLevel__c</fullName>
        <label>conversationEventLogLevel</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>conversationEventLogType__c</fullName>
        <label>conversationEventLogType</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>conversationTurn__c</fullName>
        <label>conversationTurn</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customFields__c</fullName>
        <label>customFields</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>detectedIntent_category__c</fullName>
        <label>detectedIntent_category</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>detectedIntent_intent__c</fullName>
        <label>detectedIntent_intent</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>elementId__c</fullName>
        <label>elementId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eventTimestamp__c</fullName>
        <label>eventTimestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>externalLatencyTime__c</fullName>
        <label>externalLatencyTime</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>externalSessionKey__c</fullName>
        <label>externalSessionKey</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>integrationName__c</fullName>
        <label>integrationName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>integrationType__c</fullName>
        <label>integrationType</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>languageCode__c</fullName>
        <label>languageCode</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>message__c</fullName>
        <label>message</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>orgId__c</fullName>
        <label>orgId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>plannerActionOutput_actionId__c</fullName>
        <label>plannerActionOutput_actionId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>plannerActionOutput_actionName__c</fullName>
        <label>plannerActionOutput_actionName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>plannerActionOutput_duration__c</fullName>
        <label>plannerActionOutput_duration</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>plannerActionOutput_isSuccess__c</fullName>
        <label>plannerActionOutput_isSuccess</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>plannerActionOutput_plannerId__c</fullName>
        <label>plannerActionOutput_plannerId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>plannerId__c</fullName>
        <label>plannerId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>plannerPlanType_planData__c</fullName>
        <label>plannerPlanType_planData</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>plannerPlanType_planId__c</fullName>
        <label>plannerPlanType_planId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>plannerSessionId__c</fullName>
        <label>plannerSessionId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>plannerTopicFailed_topic__c</fullName>
        <label>plannerTopicFailed_topic</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>plannerTopic_topic__c</fullName>
        <label>plannerTopic_topic</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>previousEventLogUuid__c</fullName>
        <label>previousEventLogUuid</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ruleActionId__c</fullName>
        <label>ruleActionId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userId__c</fullName>
        <label>userId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>uuid__c</fullName>
        <label>uuid</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>